<resources>
    <string name="app_name">JE Studio</string>
    <string name="profile_tab">Profile</string>
    <string name="book_tab">Book</string>
    <string name="payments_tab">Payments</string>
    <string name="capacity">Capacity</string>
    <string name="bikes">bikes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="establishments">Studios</string>
    <string name="classes_setting">My classes</string>
    <string name="notifications_setting">Notifications</string>
    <string name="payments_setting">Payments</string>
    <string name="log_in">Please sign in</string>
    <string name="log_in_instructions">Or if you don\'t already have an account,</string>
    <string name="email_hint">email</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="register_button">Sign up</string>
    <string name="name_label">Name</string>
    <string name="last_name_label">Lastname</string>
    <string name="password_guidelines">Must be 8 characters long, contain a capital letter and a digit</string>
    <string name="already_have_account">Or if you already have an account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration_failed_toast">Failed to register</string>
    <string name="incomplete_form">Please fill in all the fields</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="invalid_email_toast">Your email format is invalid</string>
    <string name="invalid_password_error">Invalid password</string>
    <string name="invalid_password_toast">Please follow the password creating guidelines</string>
    <string name="password_mismatch_toast">There\'s a mismatch between your passwords </string>
    <string name="successful_profile_update_toast">User profile created successfully</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="bike_selection">You\'ve chosen bike number %1$s</string>
    <string name="confirm_button_label">Confirm</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="your_class_on">Your class on</string>
    <string name="at">at</string>
    <string name="has_been_booked">has been booked</string>
    <string name="ok_label">Ok</string>
    <string name="calendar_event_title">JE Studio Spinning session</string>
    <string name="calendar_event_description">Spinning session</string>
</resources>